<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_final_answer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="cnt4514c.unfsymposiumnfcquiz.FinalAnswerActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:gravity="center"
            android:padding="50dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:background="@drawable/panel1">
                </ImageView>


                <ImageView
                    android:id="@+id/nfc_image1"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="150px"
                    android:src="@drawable/nfc_tag_image1">
                </ImageView>

                <ImageView
                    android:id="@+id/nfc_image2"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="150px"
                    android:src="@drawable/nfc_tag_image_correct">
                </ImageView>

                <ImageView
                    android:id="@+id/nfc_image3"
                    android:layout_gravity="center_vertical"
                    android:scaleType="centerInside"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="150px"
                    android:src="@drawable/nfc_tag_image_wrong">
                </ImageView>
            </FrameLayout>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <TableRow
            android:background="#FFFFFF"
            android:padding="5dp">
            <TextView
                android:textColor="@color/colorPrimary"
                android:text="@string/app_name"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/qText"
                />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:background="#000000"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/optLetterA"
                android:text="@string/optLetterA"
                />
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/aText1" />

        </TableRow>

        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/optLetterB"
                android:text="@string/optLetterB"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/aText2"/>

        </TableRow>
        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/optLetterC"
                android:text="@string/optLetterC"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/aText3"/>

        </TableRow>
        <TableRow
            android:padding="5dp"
            android:layout_width="match_parent">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/optLetterD"
                android:text="@string/optLetterD"/>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/aText4" />

        </TableRow>
    </TableLayout>
</TableLayout>
